Mon Dec 13 14:28:19 GMT 2010  Olly Betts <olly@survex.com>

	* include/xapian/: Make it more explicitly clear that PostingIterator,
	  PositionIterator, and TermIterator's skip_to methods advance (and
	  hence shouldn't be expected to allow you to "rewind" the stream).

Mon Dec 13 14:18:18 GMT 2010  Olly Betts <olly@survex.com>

	* include/xapian/database.h: "network databases" -> "remote databases".

Mon Dec 13 14:10:08 GMT 2010  Olly Betts <olly@survex.com>

	* net/remoteserver.cc: If the message parameter only contains a
	  string then we can just use it as is.

Mon Dec 13 13:34:30 GMT 2010  Olly Betts <olly@survex.com>

	* backends/remote/remote-database.cc,common/remote-database.h,
	  common/remoteprotocol.h,common/remoteserver.h,
	  docs/remote_protocol.html,net/remoteserver.cc,tests/api_metadata.cc:
	  Add support for iterating metadata keys with the remote backend.
	  This change necessitated a minor version bump in the remote protocol.

Sun Dec 12 12:24:48 GMT 2010  Olly Betts <olly@survex.com>

	* weight/tradweight.cc: Fix calculation order to avoid inconsistent
	  weights due to rounding for TradWeight(0).
	* tests/api_backend.cc: Add regression test tradweight2.

Sat Dec 11 11:38:32 GMT 2010  Olly Betts <olly@survex.com>

	* AUTHORS: Update thanks list with bug reporters and patch submitters.

Thu Dec 09 03:59:42 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Thu Dec 09 03:58:20 GMT 2010  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Add FIXME note about using sendfile() or
	  similar.

Tue Dec 07 10:16:31 GMT 2010  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Note 1.0.x version #515 was fixed in.

Mon Dec 06 05:26:01 GMT 2010  Olly Betts <olly@survex.com>

	* net/replicatetcpclient.cc: Rearrange loop to avoid duplicating code.

Mon Dec 06 01:39:23 GMT 2010  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Fix typo so we test for OP_NEAR or