@@ -55,6 +55,15 @@ case $1 in
     exec $LIBTOOL --mode=execute $tool "$@" ;;
 esac
 
+if [ -n "$XAPIAN_TESTSUITE_LD_PRELOAD" ] ; then
+  if [ -n "$LD_PRELOAD" ] ; then
+    LD_PRELOAD=$LD_PRELOAD:$XAPIAN_TESTSUITE_LD_PRELOAD
+  else
+    LD_PRELOAD=$XAPIAN_TESTSUITE_LD_PRELOAD
+  fi
+  export LD_PRELOAD
+fi
+
 # Allow configure probed value for VALGRIND to be overridden by e.g.
 #   VALGRIND= ./runtest ./apitest
 test -z "${VALGRIND+set}" && VALGRIND="@VALGRIND@"
@@ -104,7 +113,11 @@ echo "Running test '$@' under valgrind"
 # output, so weuse an LD_PRELOAD hack to get valgrind to check the input is
 # initialised and then tell it that the output is initialised.
 if [ -f zlib-vg.so ] ; then
-  LD_PRELOAD=./zlib-vg.so
+  if [ -n "$LD_PRELOAD" ] ; then
+    LD_PRELOAD=$LD_PRELOAD:./zlib-vg.so
+  else
+    LD_PRELOAD=./zlib-vg.so
+  fi
   export LD_PRELOAD
 fi
 exec $LIBTOOL --mode=execute $VALGRIND $vg_opts "$@"
