@@ -1,3 +1,8 @@
+Tue Dec 14 12:46:36 GMT 2010  Olly Betts <olly@survex.com>
+
+	* HACKING,tests/runtest.in: Add XAPIAN_TESTSUITE_LD_PRELOAD hook to
+	  allow libeatmydata to easily be used when running the testsuite.
+
 Mon Dec 13 14:28:19 GMT 2010  Olly Betts <olly@survex.com>
 
 	* include/xapian/: Make it more explicitly clear that PostingIterator,
